--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,13 +1,41 @@
-
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'my_new_project'
+name: 'medicare_saf_connector'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: 'default'                         # configuration required
+
+vars:
+  source_name: saf                      # configuration required
+                                        # name describing the dataset feeding this project
+
+  input_database: medicare_lds_saf      # configuration required
+                                        # name of the database where sources feeding this project are stored
+
+  input_schema:  source                 # configuration required
+                                        # name of the schema where sources feeding this project is stored
+
+  output_database: medicare_lds_saf     # configuration required
+                                        # name of the database where output of this project should be written
+
+  output_schema: claims_input           # configuration required
+                                        # name of the schema where output of this project should be written
+
+  carrier_base_claim: "{{ source(var('source_name'),'carrier_base_claim') }}"  
+  carrier_claim_line: "{{ source(var('source_name'),'carrier_claim_line') }}"  
+  dme_base_claim: "{{ source(var('source_name'),'dme_base_claim') }}"
+  dme_claim_line: "{{ source(var('source_name'),'dme_claim_line') }}"
+  hha_base_claim: "{{ source(var('source_name'),'hha_base_claim') }}"
+  hha_revenue_center: "{{ source(var('source_name'),'hha_revenue_center') }}"
+  hospice_base_claim: "{{ source(var('source_name'),'hospice_base_claim') }}"
+  hospice_revenue_center: "{{ source(var('source_name'),'hospice_revenue_center') }}"
+  inpatient_base_claim: "{{ source(var('source_name'),'inpatient_base_claim') }}"
+  inpatient_revenue_center: "{{ source(var('source_name'),'inpatient_revenue_center') }}"
+  master_beneficiary_summary: "{{ source(var('source_name'),'master_beneficiary_summary') }}"
+  outpatient_base_claim: "{{ source(var('source_name'),'outpatient_base_claim') }}"
+  outpatient_revenue_center: "{{ source(var('source_name'),'outpatient_revenue_center') }}"
+  snf_base_claim: "{{ source(var('source_name'),'snf_base_claim') }}"
+  snf_revenue_center: "{{ source(var('source_name'),'snf_revenue_center') }}"
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
@@ -32,7 +60,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      materialized: view
+  medicare_saf_connector:
+    +materialized: view
+    core:
+      +materialized: table
