--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,7 +3,7 @@ version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'                         # configuration required
+profile: 'default'                      # configuration required
 
 vars:
   source_name: saf                      # configuration required
@@ -12,10 +12,10 @@ vars:
   input_database: medicare_lds_saf      # configuration required
                                         # name of the database where sources feeding this project are stored
 
-  input_schema:  source                 # configuration required
+  input_schema:  saf                    # configuration required
                                         # name of the schema where sources feeding this project is stored
 
-  output_database: medicare_lds_saf     # configuration required
+  output_database: tuva                 # configuration required
                                         # name of the database where output of this project should be written
 
   output_schema: claims_input           # configuration required
