Updates logic and data model for eligibility

--- a/models/core/eligibility.yml
+++ b/models/core/eligibility.yml
@@ -6,3 +6,6 @@ models:
       config:
         database: "{{ var('output_database')}}"
         schema: "{{ var('output_schema')}}"
+      tests:
+        - unique:
+            column_name: "(patient_id || '-' || payer || '-' || enrollment_start_date || '-' || enrollment_end_date)"
