--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,19 +3,19 @@ version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'                      # configuration required
+profile: 'tuva-snowflake'                      # configuration required
 
 vars:
-  input_database: medicare_lds_saf      # configuration required
+  input_database: medicare_saf      # configuration required
                                         # name of the database where sources feeding this project are stored
 
-  input_schema:  saf                    # configuration required
+  input_schema:  raw_data                    # configuration required
                                         # name of the schema where sources feeding this project is stored
 
-  output_database: tuva                 # configuration required
+  output_database: medicare_saf                 # configuration required
                                         # name of the database where output of this project should be written
 
-  output_schema: claims_input           # configuration required
+  output_schema: claims_data_model           # configuration required
                                         # name of the schema where output of this project should be written
 
   carrier_base_claim: "{{ source('saf','carrier_base_claim') }}"
