--- a/models/_models.yml
+++ b/models/_models.yml
@@ -93,3 +93,9 @@ models:
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
+
+  - name: pharmacy_claim
+    description: Claim line details of all claim types
+    config:
+      database: "{{ var('output_database')}}"
+      schema: "{{ var('output_schema')}}"
