--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,22 +2,24 @@ name: 'medicare_saf_connector'
 version: '1.0.0'
 config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
-profile: 'tuva-snowflake'                      # configuration required
 
+profile: 'default'                      
+
+## Variables affecting the configuration of this project and the Tuva Project
+## packages are below.
 vars:
-  input_database: medicare_saf      # configuration required
-                                        # name of the database where sources feeding this project are stored
 
-  input_schema:  raw_data                    # configuration required
-                                        # name of the schema where sources feeding this project is stored
+#########################################
+#### Medicare SAF Project Variables ####
+#########################################
 
-  output_database: medicare_saf                 # configuration required
-                                        # name of the database where output of this project should be written
+  input_database: medicare_saf      
+  input_schema:  raw_data
 
-  output_schema: claims_data_model           # configuration required
-                                        # name of the schema where output of this project should be written
+  output_database: medicare_saf
+  output_schema: claims_data_model
 
+  ## Source Table Names
   carrier_base_claim: "{{ source('saf','carrier_base_claim') }}"
   carrier_claim_line: "{{ source('saf','carrier_claim_line') }}"
   dme_base_claim: "{{ source('saf','dme_base_claim') }}"
@@ -34,9 +36,29 @@ vars:
   snf_base_claim: "{{ source('saf','snf_base_claim') }}"
   snf_revenue_center: "{{ source('saf','snf_revenue_center') }}"
 
-# These configurations specify where dbt should look for different types of files.
-# The `source-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+########################################
+#### Tuva Project Package Variables ####
+########################################
+
+## Package Enabled Variables:
+## These variables tell the Tuva Project which packages you want
+## to enable.  To enable a package set it to true, to disable a 
+## package set it to false.
+  claims_preprocessing_enabled: true
+  cms_chronic_conditions_enabled: true
+  data_profiling_enabled: true 
+  pmpm_enabled: true
+  readmissions_enabled: true
+  terminology_enabled: true
+  tuva_chronic_conditions_enabled: true
+
+
+## Target Database Variable:
+## This variable tells the Tuva Project where to write the 
+## output data to.  You must create this database in your
+## data warehouse before running the Tuva Project.
+  tuva_database: medicare_saf  
+
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -49,13 +71,6 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
 models:
   medicare_saf_connector:
     +materialized: view
