reverted dbt_project.yml to defaults

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -12,13 +12,13 @@ vars:
 #########################################
 #### Medicare SAF Project Variables ####
 #########################################
-  input_database: medicare-lds-five-percent
-  input_schema:  raw_data_five_percent
+  input_database: medicare_lds
+  input_schema:  raw_data
 
-  output_database: medicare-lds-five-percent
-  output_schema: claims_data_model
+  output_database: medicare_lds
+  output_schema: input_layer
   
-  tuva_database: medicare-lds-five-percent  
+  tuva_database: medicare_lds
 
 
   ## Source Table Names
