--- a/integration_tests/packages.yml
+++ b/integration_tests/packages.yml
@@ -1,4 +1,4 @@
 packages:
   - local: ../
-  - package: tuva-health/the_tuva_project
-    version: 0.3.0
+#  - package: tuva-health/the_tuva_project
+#    version: 0.3.0
