--- a/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
@@ -5,8 +5,8 @@ on:
   pull_request_target:
 
 env:
-  DBT_BIGQUERY_TOKEN: ${{ secrets.TUVA_BIGQUERY_TOKEN }}
-  TUVA_BIGQUERY_PROJECT: ${{ secrets.TUVA_BIGQUERY_PROJECT }}
+  DBT_BIGQUERY_TOKEN: ${{ secrets.DBT_BIGQUERY_TOKEN }}
+  DBT_BIGQUERY_PROJECT: ${{ secrets.DBT_BIGQUERY_PROJECT }}
 
   
 jobs:
