--- a/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   DBT_BIGQUERY_TOKEN: ${{ secrets.DBT_BIGQUERY_TOKEN }}
-  DBT_BIGQUERY_PROJECT: ${{ secrets.DBT_BIGQUERY_PROJECT }}
+  DBT_BIGQUERY_CI_PROJECT: ${{ secrets.DBT_BIGQUERY_CI_PROJECT }}
 
   
 jobs:
