--- a/models/_models.yml
+++ b/models/_models.yml
@@ -6,8 +6,11 @@ models:
   - name: carrier_claim
     description: Claim line details of carrier claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -15,8 +18,11 @@ models:
   - name: dme_claim
     description: Claim line details of durable medical equipment claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -27,14 +33,20 @@ models:
       on DUAL_STUS_CD and MDCR_STATUS_CODE creating a row for each year/month 
       of eligibility.
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
 
   - name: home_health_claim
     description: Claim line details of home health claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -42,8 +54,11 @@ models:
   - name: hospice_claim
     description: Claim line details of hospice claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -51,8 +66,11 @@ models:
   - name: inpatient_claim
     description: Claim line details of inpatient claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -60,8 +78,11 @@ models:
   - name: outpatient_claim
     description: Claim line details of outpatient claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -69,8 +90,11 @@ models:
   - name: snf_claim
     description: Claim line details of skilled nursing facility claims
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -79,8 +103,11 @@ models:
   - name: eligibility
     description: Member eligibility at the month grain
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(patient_id || '-' || payer || '-' || enrollment_start_date || '-' || enrollment_end_date)"
@@ -88,8 +115,11 @@ models:
   - name: medical_claim
     description: Claim line details of all claim types
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
     tests:
       - unique:
           column_name: "(claim_id || '-' || claim_line_number)"
@@ -97,5 +127,8 @@ models:
   - name: pharmacy_claim
     description: Claim line details of all claim types
     config:
-      database: "{{ var('output_database')}}"
-      schema: "{{ var('output_schema')}}"
+      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
+      schema: |
+        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
+        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
+        {% else %}medicare_lds{%- endif -%}
