--- a/.github/workflows/biweekly_dbt_v1.3.0_redshift_build_full_refresh.yml
+++ b/.github/workflows/biweekly_dbt_v1.3.0_redshift_build_full_refresh.yml
@@ -33,7 +33,7 @@ jobs:
       - name: dbt-build
         uses: mwhitaker/dbt-action@v1.3.0
         with:
-          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/redshift --vars {"tuva_database":"dev_ci_testing","input_database":"dev_ci_testing","input_schema":"lds"}'
+          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/redshift --vars {"tuva_database":"dev_ci_testing","input_database":"dev_ci_testing","input_schema":"saf"}'
 
       - name: Get the result
         if: ${{ always() }}
