--- a/.github/workflows/dbt_v1.4.6_snowflake_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_snowflake_build_full_refresh.yml
@@ -2,7 +2,7 @@ name: dbt_v1.4.6_snowflake_build_full_refresh
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
 
 env:
   DBT_SNOWFLAKE_CI_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_CI_ACCOUNT }}
